examples/test/testpolicy1972.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1972
  namespace: namespace342
spec:
  podSelector:
    matchLabels:
      key28: value46
      key45: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value8
          key46: value39
      podSelector:
        matchLabels:
          key38: value18
          key17: value12
